# hyrax

./: README.md
src/: README.md
src/bccgp/: .gitignore  .pylintrc  Makefile  pymiracl  pymircffi  run_bccgp.py
src/bccgp/libbccgp/: __init__.py  bccgp.py  bullet.py  pws.py  solve.py
src/bccgp/pylaurent/: __init__.py  __main__.py  pyl_test.py
src/bccgp/pylaurent/src/: .gitignore  Makefile  pylaurent.cc
src/fennel/: .pylintrc  Makefile  README.md  pws_info.py  run_fennel.py
src/fennel/libfennel/: __init__.py  arithcircuit.py  arithcircuitbuilder.py  circuitni.py  circuitnizk.py  circuitnizkvecwit.py  circuitprover.py  circuitverifier.py  commit.py  defs.py  fiatshamir.py  gateprover.py  iomlext.py  layercompute.py  layerprover.py  parse_pws.py  randutil.py  rdlprover.py  util.py
src/fennel/libfenneltests/: __init__.py  __main__.py  circuit.py  commit.py  compute_beta.py  compute_v.py  iomlext.py  layer.py  logwit.py  nizk.py  nizkvecwit.py  nonint.py  verifier.py
src/fennel/pymircffi/: __init__.py  __main__.py  ecslib  test_curve.py
src/fennel/pypws/: __init__.py
src/libpws/: .gitignore  configure.ac
src/libpws/src/: Makefile.am
src/libpws/src/circuit/: Makefile.am  circuit_layer.cc  circuit_layer.hh  maybe.hh  pws_circuit_parser.cc  pws_circuit_parser.hh  pws_primitives.hh
src/libpws/src/pws2svg/: Makefile.am  pws2svg.cc  pws2svg.hh
src/libpws/src/pwsrepeat/: Makefile.am  pwsrepeat.cc
src/libpws/src/pylibpws/: Makefile.am  pylibpws.cc
src/libpws/src/tests/: Makefile.am  simple4.pws
src/miracl/: .gitignore  Makefile.am  README.md  configure.ac
src/miracl/lib/: .gitignore
src/miracl/src/: Makefile.am
src/miracl/src/miracl/: Makefile.am  miracl.h  mirdef.h  mralloc.c  mrkcm.c  mrkcm3.c  mrkcm4.c
src/miracl/src/pymircffi/: Makefile.am  multiexp.c  pymircffi.c  pymircffi.h
src/miracl/src/tests/: .gitignore  Makefile.am  ecsgen.c  ecsgen_driver.test
src/pws/: lanczos2.py  matmult.py  sha256gen.py
src/pws/experiments/: plot.py  plot_all.sh
src/pws/experiments/SHA256/: build.sh  plot.sh  process.sh  run.sh
src/pws/experiments/lanczos2/: run.sh
src/pws/experiments/ligero/: ligero.csv  process.sh
src/pws/experiments/matmult/: run.sh
src/pws/experiments/zkboo/: .gitignore  process.sh  run.sh
src/zkboo/: .gitignore  MPC_SHA256.c  MPC_SHA256_VERIFIER.c  Makefile  README.md  shared.h
