AM_CFLAGS = $(GLOBAL_CFLAGS) $(OPT_CFLAGS)

noinst_LTLIBRARIES = libmiracl_impl.la
lib_LTLIBRARIES = libmiracl.la

libmiracl_la_SOURCES =
libmiracl_la_LIBADD = libmiracl_impl.la

libmiracl_impl_la_SOURCES = miracl.h mirdef.h mralloc.c mrarth0.c mrarth1.c mrarth2.c mrarth3.c mrbits.c mrcore.c mrcurve.c mrio1.c mrio2.c mrjack.c mrlucas.c mrmonty.c mrmuldv.c mrrand.c mrsroot.c mrxgcd.c mrkcm.c
